# Spectra

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  Settings.tsx  main.tsx  overlay.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/state/: mod.rs
src/components/: ColorResult.tsx  Loupe.tsx
src/hooks/: usePixelPicker.ts
src/utils/: colorUtils.ts
