[package]
name = "Spectra"
version = "0.1.0"
authors = ["Pancake"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
screenshots = "0.8.10"
enigo = "0.3.0"
device_query = "4.0.1"
